--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -3,3 +3,7 @@
 <p>You found me!</p>
 
 <img src="https://images.unsplash.com/photo-1534375971785-5c1826f739d8?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=cdb085d3dce0f4c6b1851bfbd15706ce&auto=format&fit=crop&w=1350&q=80" alt="">
+
+<li><a href="/register">Sign Up</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
